--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>TOP Landing Page</title>
 </head>
 <body>
     <header>
-
+        <h1>Header Logo</h1>
+        <a href="#" target="blank">Header Link One</a>
+        <a href="#" target="blank">Header Link Two</a>
+        <a href="#" target="blank">Header Link Three</a>
     </header>
     <main>
         <div>
@@ -21,13 +25,13 @@
         <div>
             <p>Quote</p>
         </div>
-        <div>
+        <div id="call-to-action">
             <h3>Call to Action</h3>
             <p>Some text</p>
             <button>Sign Up</button>
         </div>
     </main>
-    <footer>
+    <footer id="footer">
         <p>Some Text</p>
     </footer>
 </body>
