--- a/index.html
+++ b/index.html
@@ -5,22 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>TOP Landing Page</title>
 </head>
 <body>
     <header>
-        <h1>Header Logo</h1>
-        <a href="#" target="blank">Header Link One</a>
-        <a href="#" target="blank">Header Link Two</a>
-        <a href="#" target="blank">Header Link Three</a>
+        <div class="logo">
+            <h1>Header Logo</h1>
+        </div>
+        <div class="links">
+            <a href="#" target="blank">Header Link One</a>
+            <a href="#" target="blank">Header Link Two</a>
+            <a href="#" target="blank">Header Link Three</a>
+        </div>
     </header>
     <main>
-        <div>
+        <div id="hero-box">
+            <div class="hero-text">
+                <h2>This Website is Awesome!</h2>
+                <p>This is some subtext for the Hero Text. The font is smaller and the color is lower contrast.</p>
+                <button class="button">Sign Up</button>
+            </div>
+            <div class="hero-img">
+                <img src="./images/waterfalls.jpg" alt="Three Men Standing Near Waterfalls by Sam Kolder">
+            </div>
+        </div>
+            
+        <div id="info-box">
             <h2>Some Random Information</h2>
-            <div>box</div>
-            <div>box</div>
-            <div>box</div>
-            <div>box</div>
+            <div class="info">box</div>
+            <div class="info">box</div>
+            <div class="info">box</div>
+            <div class="info">box</div>
         </div>
         <div>
             <p>Quote</p>
@@ -28,7 +46,7 @@
         <div id="call-to-action">
             <h3>Call to Action</h3>
             <p>Some text</p>
-            <button>Sign Up</button>
+            <button class="button">Sign Up</button>
         </div>
     </main>
     <footer id="footer">
