Styled quote section
Added styles and markup to quote section

--- a/index.html
+++ b/index.html
@@ -35,15 +35,18 @@
             
         <div id="info-box">
             <h2>Some Random Information</h2>
-            <div class="info">box</div>
-            <div class="info">box</div>
-            <div class="info">box</div>
-            <div class="info">box</div>
+            <div id="box-box">
+                <div class="info">box</div>
+                <div class="info">box</div>
+                <div class="info">box</div>
+                <div class="info">box</div>
+            </div>
         </div>
-        <div>
-            <p>Quote</p>
+        <div id="quote-box">
+            <p id="quote">"A life changer. Never in all my years have I been so blown away. This website made Jeff Bezos quit the internet. Really, he just runs a hotdog stand now."</p>
+            <p id="attribution">-Time Magazine or something</p>
         </div>
-        <div id="call-to-action">
+        <div id="call-box">
             <h3>Call to Action</h3>
             <p>Some text</p>
             <button class="button">Sign Up</button>
