Styled info box

--- a/index.html
+++ b/index.html
@@ -36,10 +36,22 @@
         <div id="info-box">
             <h2>Some Random Information</h2>
             <div id="box-box">
-                <div class="info">box</div>
-                <div class="info">box</div>
-                <div class="info">box</div>
-                <div class="info">box</div>
+                <div class="info">
+                    <img src="./images/bridge.jpg" alt="Bridge Under White Clouds by Aleksey Kuprikov" class="box-img">
+                    <p>Some subtext about the above content</p>
+                </div>
+                <div class="info">
+                    <img src="./images/bridge.jpg" alt="Bridge Under White Clouds by Aleksey Kuprikov" class="box-img">
+                    <p>Some subtext about the above content</p>
+                </div>
+                <div class="info">
+                    <img src="./images/bridge.jpg" alt="Bridge Under White Clouds by Aleksey Kuprikov" class="box-img">
+                    <p>Some subtext about the above content</p>
+                </div>
+                <div class="info">
+                    <img src="./images/bridge.jpg" alt="Bridge Under White Clouds by Aleksey Kuprikov" class="box-img">
+                    <p>Some subtext about the above content</p>
+                </div>
             </div>
         </div>
         <div id="quote-box">
