Styled call box and footer

--- a/index.html
+++ b/index.html
@@ -59,13 +59,17 @@
             <p id="attribution">-Time Magazine or something</p>
         </div>
         <div id="call-box">
-            <h3>Call to Action</h3>
-            <p>Some text</p>
-            <button class="button">Sign Up</button>
+            <div class="call-text">
+                <h3>Call to Action!</h3>
+                <p>Sign up for more information with the click of a button!</p>
+            </div>
+            <div class="call-button">
+                <button class="button">Sign Up</button>
+            </div>
         </div>
     </main>
     <footer id="footer">
-        <p>Some Text</p>
+        <p>No Real Copyright Info. Made in March of 2022</p>
     </footer>
 </body>
 </html>
